Prace nad testami dotyczącymi pobierania plików v2